# ChangeLog for media-gfx/inkscape
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> +inkscape-9999.ebuild,
  -inkscape-9999-r20175.ebuild:
  Live svn ebuild instead of the snapshot ebuild.

  11 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  +files/inkscape-0.46-gcc43.patch, +inkscape-9999-r20175.ebuild:
  Added latest inkscape snapshot.
