@@ -1,4 +1,4 @@
 AUX inkscape-0.46-gcc43.patch 287 RMD160 68f9810c6dd7da96d7b1f73c76dab97ae3da7f25 SHA1 499d102c60122e6680b49a941f72b422b3d6d395 SHA256 dba42470e243e02e396b3bb148115ce80bf1f5a74df26a4911ebd9dcfa8dc221
 EBUILD inkscape-9999.ebuild 2980 RMD160 1c73b23683b51bec682f58bfc0c7d698ee808caa SHA1 38d0107830f8516c5354e3b34e047bbb2ca3981a SHA256 2d907505a763450eb8aae2adb1b11703e0399f1036db33bc37272cd6387bcf4d
-MISC ChangeLog 422 RMD160 da9b7f8ccbdaad98daa9b4adbc6b6c00a5ef5f00 SHA1 788b722f6731f0fb8ef611f1d29ba08197090b9d SHA256 b26a6148de666738aee44df6ad41a84b08cb63b585ef175fd4b74fe6ad83289e
+MISC ChangeLog 731 RMD160 df7171f7f95e4d7827bd132dd6ef7734550a6dd9 SHA1 4ef4131e8add79823e1a6c5cda509e85dbdcc850 SHA256 78dbc506efe8d8e9e0351e172bc43bcccd3bc0f9b9c4524ce2b8d2ae586d43c0
 MISC metadata.xml 543 RMD160 1cff74f9dc2c3013ce1258a8335ddeb27ef23a1e SHA1 6fe261e1a20f456d67ef7311faf6338a45f7f9e9 SHA256 4718d34ccf92ada6187e7db57cea00df69f1133e3e0190cf96b2d2b0af503da1
