@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<herd></herd>
+	<maintainer>
+		<email>lazy_bum@o2.pl</email>
+		<name>Piotr Szymaniak</name>
+	</maintainer>
+	<use>
+		<flag name='dia'>
+			pull in <pkg>app-office/dia</pkg> for dia import extension
+		</flag>
+		<flag name='inkjar'>
+			enables support for OpenOffice.org SVG jar files
+		</flag>
+		<flag name='postscript'>
+			pull in dependencies needed for the postscript import extension
+		</flag>
+	</use>
+</pkgmetadata>
+
