@@ -1,6 +1,15 @@
 # ChangeLog for media-gfx/inkscape
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> +metadata.xml:
+  Use flags now in metadata (GLEP 56).
+
+  02 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> +metadata.xml:
+  Use flags now in metadata (GLEP 56).
+
+  02 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> +metadata.xml:
+  Use flags now in metadata (GLEP 56).
 
   12 Nov 2008; Piotr Szymaniak <lazy_bum@o2.pl> +inkscape-9999.ebuild,
   -inkscape-9999-r20175.ebuild:
